# aerolearn_ai

./: .coveragerc  .env.example  .gitignore  CONTRIBUTING.md  Kinematics_of_Rigid_Bodies_Notes.docx  Kinematics_of_Rigid_Bodies_Presentation.pptx  README.md  code_summarizer.py  code_summary.md  phase1_implementation_status.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  untitled3.py
.github/workflows/: integration_check.yml  tests.yml
.spyproject/config/: workspace.ini
app/: __init__.py  main.py
app/config/: config.json
app/core/: __init__.py
app/models/: __init__.py  assessment.py  category.py  category_suggestion.py  content.py  content_type_registry.py  course.py  metadata_manager.py  metadata_schema.py  progress.py  tag.py  tag_search.py  tag_suggestion.py  topic.py  user.py
app/tools/: __init__.py  doc_generator.py  docgen_entry.py
app/ui/: __init__.py  automation_framework.py  performance_benchmark.py
app/utils/: config_loader.py  crypto.py
demos/: week2_demo_script.md
docs/: README.md  content_management_integration.md  doc_index.md  index.md  integration_framework.md
docs/api/: assessment_delivery_workflow.md  batch_content_metadata_api.md  search_api.md  (+24 more)
scripts/: admin_interface_selftest.py  content_analysis_selftest.py  course_organization_selftest.py  generate_test_fixtures.py  graphviz_export_example.py  setup.py
tests/: README.md  README_test_import_fixes.md  __init__.py  conftest.py  metadata_store_tests.py
tools/: auto_patch_all_tests.py  auto_patch_test_root_import.py  doc_indexer.py
(+475 files in other folders)
