[metadata]
name = aerolearn_ai
version = 0.1.0
description = AI-first education platform for Aerospace Engineering
author = AeroLearn AI Team
author_email = info@aerolearn.ai
license = Proprietary
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.9
